fixed alignment of title and close modal dialog js

--- a/app/assets/stylesheets/grievances.css.scss
+++ b/app/assets/stylesheets/grievances.css.scss
@@ -34,7 +34,7 @@ a:hover{
 
 #title{
   position: absolute;
-  line-height: 5;
+  line-height: 3.5;
   font-size: 30px;
 }
 
